20240715 ckpt='best' | MPGNN & PFN | num_data=25000

--- a/main.ipynb
+++ b/main.ipynb
@@ -13,16 +13,19 @@
     "\n",
     "import awkward as ak\n",
     "import lightning as L\n",
+    "from lightning.pytorch.callbacks import ModelCheckpoint\n",
+    "import pennylane as qml\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "import wandb\n",
     "\n",
     "from source.data.datamodule import JetTorchDataModule, JetGraphDataModule\n",
     "from source.data.opendata import JetNetEvents, TopQuarkEvents\n",
+    "from source.models.mpgnn import ClassicalMPGNN\n",
     "from source.models.part import ParticleTransformer\n",
     "from source.models.pfn import ParticleFlowNetwork\n",
     "from source.models.pnet import ParticleNet\n",
-    "from source.models.qcgnn import QuantumRotQCGNN, HybridQCGNN\n",
+    "from source.models.qcgnn import QuantumRotQCGNN\n",
     "from source.training.litmodel import TorchLightningModule, GraphLightningModel\n",
     "from source.training.loggers import csv_logger, wandb_logger\n",
     "from source.training.result import plot_metrics"
@@ -39,12 +42,15 @@
     "    # dataset = 'TopQCD'\n",
     "    dataset = 'JetNet'\n",
     "    random_seed = 42\n",
+    "    parser_args = None\n",
     "\n",
     "else:\n",
     "    # Python script (.py)\n",
     "    parser = argparse.ArgumentParser(description='Process some inputs.')\n",
     "    parser.add_argument('--dataset', type=str, default=None, help='Dataset (default: None)')\n",
     "    parser.add_argument('--random_seed', type=int, default=42, help='Random seed (default: 42)')\n",
+    "    parser.add_argument('--num_train', type=int, default=None, help='Number of training data (default: None)')\n",
+    "    parser.add_argument('--suffix', type=str, default=None, help='Suffix (default: None)')\n",
     "    parser_args = parser.parse_args()\n",
     "\n",
     "    dataset = parser_args.dataset\n",
@@ -56,6 +62,15 @@
     "    config = yaml.safe_load(file)\n",
     "    config['date'] = time.strftime('%Y%m%d_%H%M%S', time.localtime())\n",
     "    config['dataset'] = dataset\n",
+    "\n",
+    "    # Whether change default number of data\n",
+    "    if parser_args is not None:\n",
+    "        if parser_args.num_train is not None:\n",
+    "            config['Data']['num_train'] = parser_args.num_train\n",
+    "            config['Data']['num_val'] = int(0.1 * parser_args.num_train)\n",
+    "            config['Data']['num_test'] = int(0.1 * parser_args.num_train)\n",
+    "        if parser_args.suffix is not None:\n",
+    "            config['Settings']['suffix'] = parser_args.suffix\n",
     "\n",
     "    # Determine the dimension of the score.\n",
     "    if config[dataset]['num_classes'] <= 2:\n",
@@ -110,7 +125,7 @@
     "    return data_module\n",
     "\n",
     "\n",
-    "def create_training_info(model: nn.Module, model_description: str, model_hparams: dict) -> dict:\n",
+    "def create_training_info(model: nn.Module, model_description: str, model_hparams: dict, lr: float) -> dict:\n",
     "    \"\"\"Create a training information dictionary that will be recorded.\"\"\"\n",
     "\n",
     "    # Data information.\n",
@@ -129,6 +144,7 @@
     "    training_info = config.copy()\n",
     "    training_info.update(model_hparams)\n",
     "    training_info.update({\n",
+    "        'lr': lr,\n",
     "        'name': name,\n",
     "        'date': config['date'],\n",
     "        'model': model.__class__.__name__,\n",
@@ -141,11 +157,10 @@
     "    return training_info\n",
     "\n",
     "    \n",
-    "def create_lightning_model(model: nn.Module, graph: bool) -> L.LightningModule:\n",
+    "def create_lightning_model(model: nn.Module, graph: bool, lr: float) -> L.LightningModule:\n",
     "    \"\"\"Create a lightning model for trainer.\"\"\"\n",
     "\n",
     "    # Optimizer.\n",
-    "    lr = eval(config['Train']['lr'])\n",
     "    optimizer = torch.optim.RAdam(model.parameters(), lr=lr)\n",
     "\n",
     "    # Create lightning model depends on graph or not.\n",
@@ -156,7 +171,7 @@
     "        return GraphLightningModel(model, optimizer=optimizer, score_dim=score_dim, print_log=print_log)\n",
     "    else:\n",
     "        return TorchLightningModule(model, optimizer=optimizer, score_dim=score_dim, print_log=print_log)\n",
-    "    \n",
+    "\n",
     "\n",
     "def create_trainer(model: nn.Module, training_info: dict, accelerator: str) -> L.Trainer:\n",
     "    \"\"\"Create lightning trainer for training.\"\"\"\n",
@@ -177,7 +192,13 @@
     "        max_epochs=config['Train']['max_epochs'],\n",
     "        log_every_n_steps=config['Train']['log_every_n_steps'],\n",
     "        num_sanity_val_steps=config['Train']['num_sanity_val_steps'],\n",
-    "        \n",
+    "        callbacks=[ModelCheckpoint(\n",
+    "            monitor=config['Train']['ckpt_monitor'],\n",
+    "            mode=config['Train']['ckpt_mode'],\n",
+    "            save_top_k=config['Train']['ckpt_top_k'],\n",
+    "            save_last=True,\n",
+    "            filename='{epoch}-{valid_auc:.3f}-{valid_accuracy:.3f}',\n",
+    "        )],\n",
     "    )"
    ]
   },
@@ -189,7 +210,7 @@
    "source": [
     "def train(\n",
     "        model: nn.Module, model_description: str, model_hparams: dict,\n",
-    "        accelerator: str, graph: bool, pi_scale: bool = False,\n",
+    "        accelerator: str, lr: float, graph: bool, pi_scale: bool = False\n",
     "    ):\n",
     "    \n",
     "    # Fix all random stuff.\n",
@@ -197,8 +218,8 @@
     "\n",
     "    # Traditional training procedure.\n",
     "    data_module = create_data_module(graph=graph, pi_scale=pi_scale)\n",
-    "    lightning_model = create_lightning_model(model=model, graph=graph)\n",
-    "    training_info = create_training_info(model, model_description, model_hparams)\n",
+    "    lightning_model = create_lightning_model(model=model, graph=graph, lr=lr)\n",
+    "    training_info = create_training_info(model, model_description, model_hparams, lr=lr)\n",
     "    trainer = create_trainer(model, training_info, accelerator)\n",
     "    \n",
     "    # Training and validation.\n",
@@ -210,7 +231,7 @@
     "\n",
     "    # Testing.\n",
     "    if eval(config['Settings']['mode'][2]):\n",
-    "        trainer.test(lightning_model, datamodule=data_module)\n",
+    "        trainer.test(lightning_model, datamodule=data_module, ckpt='best')\n",
     "\n",
     "    # Finish wandb if used.\n",
     "    if config['Settings']['use_wandb']:\n",
@@ -218,7 +239,7 @@
     "\n",
     "    return training_info['name']\n",
     "\n",
-    "def train_quantum(model_class: nn.Module, model_hparams: dict, pi_scale: bool):\n",
+    "def train_quantum(model_class: nn.Module, model_hparams: dict, pi_scale: bool, lr: float):\n",
     "\n",
     "    model = model_class(score_dim=score_dim, **model_hparams)\n",
     "\n",
@@ -230,13 +251,13 @@
     "    model_description = f\"nI{num_ir_qubits}_nQ{num_nr_qubits}_L{num_layers}_R{num_reupload}_D{dropout:.2f}\"\n",
     "\n",
     "    accelerator = 'cpu'\n",
-    "    name = train(model, model_description, model_hparams, accelerator, graph=False, pi_scale=pi_scale)\n",
+    "    name = train(model, model_description, model_hparams, accelerator, lr=lr, graph=False, pi_scale=pi_scale)\n",
     "\n",
     "    return name\n",
     "\n",
-    "def train_pfn(model_hparams: dict):\n",
+    "def train_mpgnn(model_hparams: dict, lr: float):\n",
     "    \n",
-    "    model = ParticleFlowNetwork(score_dim=score_dim, **model_hparams)\n",
+    "    model = ClassicalMPGNN(score_dim=score_dim, **model_hparams)\n",
     "\n",
     "    phi_out = model_hparams['phi_out']\n",
     "    phi_hidden = model_hparams['phi_hidden']\n",
@@ -245,24 +266,23 @@
     "    model_description = f\"O{phi_out}_H{phi_hidden}_L{phi_layers}_D{dropout:.2f}\"\n",
     "\n",
     "    accelerator = 'gpu' if torch.cuda.is_available() else 'cpu'\n",
-    "    name = train(model, model_description, model_hparams, accelerator, graph=True)\n",
+    "    name = train(model, model_description, model_hparams, accelerator, lr=lr, graph=True)\n",
     "    \n",
     "    return name\n",
     "\n",
-    "def train_benchmark(model_class: nn.Module, lite: bool = False):\n",
-    "    if lite:\n",
-    "        with open('configs/benchmark_lite.yaml', 'r') as file:\n",
-    "            hparams = yaml.safe_load(file)[model_class.__name__]\n",
-    "            model_description = 'lite'\n",
-    "    else:\n",
-    "        with open('configs/benchmark.yaml', 'r') as file:\n",
-    "            hparams = yaml.safe_load(file)[model_class.__name__]\n",
-    "            model_description = ''\n",
+    "def train_benchmark(model_class: nn.Module, lr: float):\n",
+    "    with open('configs/benchmark.yaml', 'r') as file:\n",
+    "        hparams = yaml.safe_load(file)[model_class.__name__]\n",
+    "        model_description = ''\n",
     "\n",
     "    model = model_class(score_dim=score_dim, parameters=hparams)\n",
     "    \n",
     "    accelerator = 'gpu' if torch.cuda.is_available() else 'cpu'\n",
-    "    name = train(model, model_description, hparams, accelerator, graph=False)\n",
+    "\n",
+    "    if model_class == ParticleFlowNetwork:\n",
+    "        name = train(model, model_description, hparams, accelerator, lr=lr, graph=True)\n",
+    "    else:\n",
+    "        name = train(model, model_description, hparams, accelerator, lr=lr, graph=False)\n",
     "    \n",
     "    return name"
    ]
@@ -274,10 +294,10 @@
    "outputs": [],
    "source": [
     "# # QCGNN\n",
-    "# for num_nr_qubits in [3, 5, 7]:\n",
-    "#     print(f\"\\n* Train QCGNN {num_nr_qubits}.\\n\")\n",
-    "#     qcgnn_hparams = {'num_ir_qubits': 4, 'num_nr_qubits': num_nr_qubits, 'num_layers': 1, 'num_reupload': num_nr_qubits, 'dropout': 0.0}\n",
-    "#     name = train_quantum(model_class=QuantumRotQCGNN, model_hparams=qcgnn_hparams, pi_scale=True)"
+    "# for Q in [3, 6]:\n",
+    "#     print(f\"\\n* Train QCGNN n_Q = {Q}.\\n\")\n",
+    "#     qcgnn_hparams = {'num_ir_qubits': 4, 'num_nr_qubits': Q, 'num_layers': Q // 3, 'num_reupload': 2, 'dropout': 0.0, 'vqc_ansatz': qml.StronglyEntanglingLayers}\n",
+    "#     name = train_quantum(model_class=QuantumRotQCGNN, model_hparams=qcgnn_hparams, pi_scale=True, lr=1e-3)"
    ]
   },
   {
@@ -286,51 +306,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Hybrid\n",
-    "# for num_nr_qubits in [3, 5, 7]:\n",
-    "#     print(f\"\\n* Train Hybrid {num_nr_qubits}.\\n\")\n",
-    "#     qcgnn_hparams = {'num_ir_qubits': 4, 'num_nr_qubits': num_nr_qubits, 'num_layers': 1, 'num_reupload': num_nr_qubits, 'dropout': 0.0}\n",
-    "#     name = train_quantum(model_class=HybridQCGNN, model_hparams=qcgnn_hparams, pi_scale=False)dddddsdasdasdasdasd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# # MPGNN\n",
+    "# for phi_dim in [3, 6, 64]:\n",
+    "#     pfn_hparams = {'phi_in': 3 + 3, 'phi_out': phi_dim, 'phi_layers': 2, 'phi_hidden': phi_dim, 'dropout': 0.0}\n",
+    "#     name = train_mpgnn(model_hparams=pfn_hparams, lr=1e-3)\n",
+    "\n",
     "# # Particle Flow Network.\n",
+    "# print(f\"\\n* Train Particle Flow Network.\\n\")\n",
+    "# name = train_benchmark(model_class=ParticleFlowNetwork, lr=1e-3)\n",
     "\n",
-    "for phi_dim in [3, 5, 7, 64]:\n",
-    "    print(f\"\\n* Train PFN {phi_dim}.\\n\")\n",
-    "    pfn_hparams = {'phi_in': 6, 'phi_out': phi_dim, 'phi_layers': 2, 'phi_hidden': phi_dim, 'dropout': 0.0}\n",
-    "    name = train_pfn(model_hparams=pfn_hparams)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # # Particle Transformer.\n",
-    "\n",
+    "# # Particle Transformer.\n",
     "# print(f\"\\n* Train Particle Transformer.\\n\")\n",
-    "# name = train_benchmark(model_class=ParticleTransformer, lite=False)\n",
-    "# name = train_benchmark(model_class=ParticleTransformer, lite=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Particle Net.\n",
+    "# name = train_benchmark(model_class=ParticleTransformer, lr=1e-3)\n",
     "\n",
+    "# # Particle Net.\n",
     "# print(f\"\\n* Train Particle Net.\\n\")\n",
-    "# name = train_benchmark(model_class=ParticleNet, lite=False)\n",
-    "# name = train_benchmark(model_class=ParticleNet, lite=True)"
+    "# name = train_benchmark(model_class=ParticleNet, lr=1e-3)"
    ]
   }
  ],
