--- a/notebooks/dataset_jetnet.ipynb
+++ b/notebooks/dataset_jetnet.ipynb
@@ -43,7 +43,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading JetNet dataset from channel: g\n",
+      "Loading JetNet dataset from channel: g\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Loading JetNet dataset from channel: q\n",
       "Loading JetNet dataset from channel: t\n",
       "Loading JetNet dataset from channel: w\n",
