--- a/notebooks/qdev_time.ipynb
+++ b/notebooks/qdev_time.ipynb
@@ -15,53 +15,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Name: PennyLane\n",
-      "Version: 0.36.0\n",
-      "Summary: PennyLane is a cross-platform Python library for quantum computing, quantum machine learning, and quantum chemistry. Train a quantum computer the same way as a neural network.\n",
-      "Home-page: https://github.com/PennyLaneAI/pennylane\n",
-      "Author: \n",
-      "Author-email: \n",
-      "License: Apache License 2.0\n",
-      "Location: /home/yianchen/.pyenv/versions/3.12.2/lib/python3.12/site-packages\n",
-      "Requires: appdirs, autograd, autoray, cachetools, networkx, numpy, pennylane-lightning, requests, rustworkx, scipy, semantic-version, toml, typing-extensions\n",
-      "Required-by: PennyLane-qiskit, pennylane-qulacs, PennyLane_Lightning, QCGNN\n",
-      "\n",
-      "Platform info:           Linux-5.14.0-362.8.1.el9_3.x86_64-x86_64-with-glibc2.34\n",
-      "Python version:          3.12.2\n",
-      "Numpy version:           1.26.4\n",
-      "Scipy version:           1.13.0\n",
-      "Installed devices:\n",
-      "- lightning.qubit (PennyLane_Lightning-0.36.0)\n",
-      "- default.clifford (PennyLane-0.36.0)\n",
-      "- default.gaussian (PennyLane-0.36.0)\n",
-      "- default.mixed (PennyLane-0.36.0)\n",
-      "- default.qubit (PennyLane-0.36.0)\n",
-      "- default.qubit.autograd (PennyLane-0.36.0)\n",
-      "- default.qubit.jax (PennyLane-0.36.0)\n",
-      "- default.qubit.legacy (PennyLane-0.36.0)\n",
-      "- default.qubit.tf (PennyLane-0.36.0)\n",
-      "- default.qubit.torch (PennyLane-0.36.0)\n",
-      "- default.qutrit (PennyLane-0.36.0)\n",
-      "- default.qutrit.mixed (PennyLane-0.36.0)\n",
-      "- null.qubit (PennyLane-0.36.0)\n",
-      "- qiskit.aer (PennyLane-qiskit-0.36.0)\n",
-      "- qiskit.basicaer (PennyLane-qiskit-0.36.0)\n",
-      "- qiskit.basicsim (PennyLane-qiskit-0.36.0)\n",
-      "- qiskit.ibmq (PennyLane-qiskit-0.36.0)\n",
-      "- qiskit.ibmq.circuit_runner (PennyLane-qiskit-0.36.0)\n",
-      "- qiskit.ibmq.sampler (PennyLane-qiskit-0.36.0)\n",
-      "- qiskit.remote (PennyLane-qiskit-0.36.0)\n",
-      "- qulacs.simulator (pennylane-qulacs-0.36.0)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import sys\n",
@@ -73,7 +29,7 @@
     "\n",
     "sys.path.append(os.path.abspath('../'))\n",
     "\n",
-    "from source.models.qcgnn import QuantumRotQCGNN\n",
+    "from source.models.qcgnn import HybridQCGNN\n",
     "\n",
     "os.environ['OMP_NUM_THREADS'] = '8'\n",
     "\n",
@@ -82,39 +38,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "# ModelLog: Quantum device  = default.qubit\n",
-      "# ModelLog: Quantum backend = qiskit\n",
-      "# ModelLog: Qubits (IR, WK, NR) = ((4, 3, 3))\n",
-      "- Epoch: 0 | Loss: 12.7624\n",
-      "- Epoch: 1 | Loss: 23.1522\n",
-      "- Epoch: 2 | Loss: 19.9279\n",
-      "- Epoch: 3 | Loss: 12.8589\n",
-      "- Epoch: 4 | Loss: 6.7814\n",
-      "* Device: default.qubit | Time: 2.84 s\n",
-      "\n",
-      "# ModelLog: Quantum device  = lightning.qubit\n",
-      "# ModelLog: Quantum backend = qiskit\n",
-      "# ModelLog: Qubits (IR, WK, NR) = ((4, 3, 3))\n",
-      "- Epoch: 0 | Loss: 8.1098\n",
-      "- Epoch: 1 | Loss: 15.5815\n",
-      "- Epoch: 2 | Loss: 13.4436\n",
-      "- Epoch: 3 | Loss: 4.4681\n",
-      "- Epoch: 4 | Loss: 1.7048\n",
-      "* Device: lightning.qubit | Time: 29.39 s\n",
-      "\n",
-      "# ModelLog: Quantum device  = qulacs.simulator\n",
-      "# ModelLog: Quantum backend = qiskit\n",
-      "# ModelLog: Qubits (IR, WK, NR) = ((4, 3, 3))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "q_setup = [\n",
     "    ('default.qubit', 'best'),\n",
@@ -133,14 +59,16 @@
     "\n",
     "    time_start = time.time()\n",
     "    \n",
-    "    model = QuantumRotQCGNN(\n",
+    "    model = HybridQCGNN(\n",
     "        num_ir_qubits=4,\n",
     "        num_nr_qubits=3,\n",
     "        num_layers=1,\n",
-    "        num_reupload=1,\n",
+    "        num_reupload=2,\n",
+    "        num_rotation=1,\n",
+    "        vqc_ansatz=qml.BasicEntanglerLayers,\n",
     "        score_dim=score_dim,\n",
     "        qdevice=dev,\n",
-    "        qbackend='qiskit',\n",
+    "        # qbackend='qiskit',\n",
     "        diff_method=diff_method,\n",
     "    )\n",
     "    \n",
