20240719 Add `ckpt_path='best'` for trainer.test

--- a/main.ipynb
+++ b/main.ipynb
@@ -231,7 +231,7 @@
     "\n",
     "    # Testing.\n",
     "    if eval(config['Settings']['mode'][2]):\n",
-    "        trainer.test(lightning_model, datamodule=data_module, ckpt='best')\n",
+    "        trainer.test(lightning_model, datamodule=data_module, ckpt_path='best')\n",
     "\n",
     "    # Finish wandb if used.\n",
     "    if config['Settings']['use_wandb']:\n",
