20240726 MPGNN 16 -> 64 | ibmq token error fix

--- a/ibmq.ipynb
+++ b/ibmq.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,6 +27,7 @@
     "import pennylane as qml\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "from qiskit_ibm_runtime.accounts import AccountAlreadyExistsError\n",
+    "from qiskit_ibm_runtime.exceptions import IBMNotAuthorizedError\n",
     "import torch\n",
     "\n",
     "from source.data.datamodule import JetTorchDataModule\n",
@@ -38,27 +39,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test IBMQ Authentication...\n",
-      "IBMQ backend <IBMBackend('ibm_cusco')> has 3627 pending jobs.\n",
-      "IBMQ backend <IBMBackend('ibm_torino')> has 3772 pending jobs.\n",
-      "IBMQ backend <IBMBackend('ibm_strasbourg')> has 43 pending jobs.\n",
-      "IBMQ backend <IBMBackend('ibm_brussels')> has 43 pending jobs.\n",
-      "IBMQ backend <IBMBackend('ibm_sherbrooke')> has 76 pending jobs.\n",
-      "IBMQ backend <IBMBackend('ibm_brisbane')> has 49 pending jobs.\n",
-      "IBMQ backend <IBMBackend('ibm_nazca')> has 1100 pending jobs.\n",
-      "IBMQ backend <IBMBackend('ibm_kyoto')> has 1885 pending jobs.\n",
-      "IBMQ backend <IBMBackend('ibm_osaka')> has 217 pending jobs.\n",
-      "IBMQ backend <IBMBackend('ibm_kyiv')> has 4 pending jobs.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dataset = 'TopQCD' # 'JetNet', or 'TopQCD'\n",
     "\n",
@@ -86,14 +69,20 @@
     "    ibmq_config['Device']['IBMQ']['qbackend'] = backend\n",
     "    try:\n",
     "        print('Test IBMQ Authentication...')\n",
-    "        service = QiskitRuntimeService(instance=\"ibm-q-hub-ntu/ntu-internal/default\")\n",
+    "        service = QiskitRuntimeService(instance='ibm-q-hub-ntu/ntu-internal/default')\n",
     "        ibmq_backends = service.backends()\n",
     "        for ibmq_backend in ibmq_backends:\n",
     "            num_jobs =  ibmq_backend.status().pending_jobs\n",
     "            print(f\"IBMQ backend {ibmq_backend} has {num_jobs} pending jobs.\")\n",
-    "    except AccountAlreadyExistsError:\n",
+    "    except (AccountAlreadyExistsError, IBMNotAuthorizedError):\n",
+    "        # If 401 error: https://docs.quantum.ibm.com/announcements/service-alerts/2024-06-05-api-token-refresh\n",
     "        token = input('Enter IBMQ token: ')\n",
-    "        QiskitRuntimeService.save_account(token=token, overwrite=True)"
+    "        QiskitRuntimeService.save_account(\n",
+    "            channel='ibm_quantum',\n",
+    "            token=token,\n",
+    "            set_as_default=True,\n",
+    "            overwrite=True\n",
+    "        )"
    ]
   },
   {
@@ -173,16 +162,14 @@
     "    status = 'Failed'\n",
     "    message = e\n",
     "finally:\n",
-    "    if mode == 'IBMQ':\n",
+    "    time_end = time.time()\n",
+    "    print(f\"Time elapsed on IBMQ ({ibmq_config['Device'][mode]['qbackend']}): {time_end - time_start:.2f}s\")\n",
+    "    if mode == 'IBMQ' and os.path.exists('configs/gmail.yaml'):\n",
     "        send_email(\n",
     "            subject=f\"IBMQ-{backend}: {status}\",\n",
     "            message=message,\n",
     "            config={},\n",
-    "        )\n",
-    "\n",
-    "time_end = time.time()\n",
-    "\n",
-    "print(f\"Time elapsed on IBMQ ({ibmq_config['Device'][mode]['qbackend']}): {time_end - time_start:.2f}s\")"
+    "        )"
    ]
   }
  ],
