--- a/main.ipynb
+++ b/main.ipynb
@@ -306,10 +306,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # MPGNN\n",
-    "# for phi_dim in [3, 6, 64]:\n",
-    "#     pfn_hparams = {'phi_in': 3 + 3, 'phi_out': phi_dim, 'phi_layers': 2, 'phi_hidden': phi_dim, 'dropout': 0.0}\n",
+    "# # MPGNN (3, 6)\n",
+    "# for phi_dim in [3, 6]:\n",
+    "#     pfn_hparams = {'phi_in': 3 + 3, 'phi_out': phi_dim, 'phi_layers': 2, 'phi_hidden': phi_dim, 'mlp_hidden': 16, 'dropout': 0.0}\n",
     "#     name = train_mpgnn(model_hparams=pfn_hparams, lr=1e-3)\n",
+    "\n",
+    "# # MPGNN (64)\n",
+    "# pfn_hparams = {'phi_in': 3 + 3, 'phi_out': 64, 'phi_layers': 2, 'phi_hidden': 64, 'mlp_hidden': 64, 'dropout': 0.0}\n",
+    "# name = train_mpgnn(model_hparams=pfn_hparams, lr=1e-3)\n",
     "\n",
     "# # Particle Flow Network.\n",
     "# print(f\"\\n* Train Particle Flow Network.\\n\")\n",
