20240809 IBMQ and Wandb results

--- a/ibmq_pretrained.ipynb
+++ b/ibmq_pretrained.ipynb
@@ -17,6 +17,7 @@
    "outputs": [],
    "source": [
     "import argparse\n",
+    "from itertools import product\n",
     "import os\n",
     "import sys\n",
     "import time\n",
@@ -46,14 +47,14 @@
     "dataset = 'TopQCD' # 'JetNet', or 'TopQCD'\n",
     "\n",
     "if 'ipykernel' in sys.argv[0]:\n",
-    "    mode = 'IBMQ' # 'IBMQ', or 'Simulator', or 'Noise'\n",
+    "    mode = 'Simulator' # 'IBMQ' or 'Simulator'\n",
     "    backend = ''\n",
     "else:\n",
     "    parser = argparse.ArgumentParser(description='Process some inputs.')\n",
     "    parser.add_argument('--mode', type=str, help='Mode: IBMQ, Simulator, or Noise')\n",
     "    parser.add_argument('--backend', type=str, default=None, help='Backend (default: None)')\n",
     "    parser_args = parser.parse_args()\n",
-    "\n",
+    "    \n",
     "    mode = parser_args.mode\n",
     "    backend = parser_args.backend\n",
     "\n",
@@ -62,7 +63,7 @@
     "\n",
     "with open(f\"configs/ibmq.yaml\", 'r') as file:\n",
     "    ibmq_config = yaml.safe_load(file)\n",
-    "    save_dir = ibmq_config['Result']['output_dir']\n",
+    "    save_dir = os.path.join(ibmq_config['Result']['output_dir'], 'pretrained')\n",
     "    os.makedirs(save_dir, exist_ok=True)\n",
     "\n",
     "if mode == 'IBMQ':\n",
@@ -127,40 +128,43 @@
    "source": [
     "# Create QCGNN model.\n",
     "n_I = ibmq_config['Pretrain']['n_I']\n",
-    "n_Q = ibmq_config['Pretrain']['n_Q']\n",
-    "model = QuantumRotQCGNN(\n",
-    "    num_ir_qubits=n_I,\n",
-    "    num_nr_qubits=n_Q,\n",
-    "    num_layers=n_Q//3,\n",
-    "    num_reupload=2,\n",
-    "    vqc_ansatz=qml.StronglyEntanglingLayers,\n",
-    "    score_dim=1,\n",
-    "    **ibmq_config['Device'][mode],\n",
-    ")\n",
-    "\n",
-    "# Load pre-trained checkpoint.\n",
-    "last_ckpt = torch.load(ibmq_config['Pretrain']['ckpt_path']) # Last checkpoint.\n",
-    "best_ckpt = list(last_ckpt['callbacks'].values())[0]['best_model_path'] # Get the best checkpoint path.\n",
-    "best_state_dict = torch.load(best_ckpt)['state_dict'] # Load the best state dict.\n",
-    "best_state_dict = {k.replace('model.', ''): v for k, v in best_state_dict.items()} # Remove the 'model.' prefix.\n",
-    "model.load_state_dict(best_state_dict)\n",
-    "\n",
-    "# Turn into a lightning model.\n",
-    "model.eval()\n",
-    "lit_model = TorchLightningModule(model=model, optimizer=None, score_dim=1, print_log=False)\n",
-    "\n",
-    "# Start testing.\n",
-    "time_start = time.time()\n",
-    "logger = CSVLogger(save_dir=save_dir, name=f\"{mode}-{backend}-{ibmq_config['Data']['rnd_seed']}\")\n",
-    "trainer = L.Trainer(accelerator='cpu', default_root_dir=save_dir, logger=logger)\n",
     "\n",
     "try:\n",
-    "    status = 'Success'\n",
-    "    message = ''\n",
-    "    trainer.test(model=lit_model, datamodule=data_module)\n",
+    "    for n_Q, rnd_seed in product([6], range(5)):\n",
+    "        model = QuantumRotQCGNN(\n",
+    "            num_ir_qubits=n_I,\n",
+    "            num_nr_qubits=n_Q,\n",
+    "            num_layers=n_Q//3,\n",
+    "            num_reupload=2,\n",
+    "            vqc_ansatz=qml.StronglyEntanglingLayers,\n",
+    "            score_dim=1,\n",
+    "            **ibmq_config['Device'][mode],\n",
+    "        )\n",
+    "\n",
+    "        # Load pre-trained checkpoint.\n",
+    "        last_ckpt = torch.load(f\"./training_logs/WandbLogger/QCGNN_Rev1/QuantumRotQCGNN-nI4_nQ{n_Q}_L{n_Q//3}_R2_D0.00-TopQCD_P16_N25000-CQ0715-{rnd_seed}/checkpoints/last.ckpt\") # Last checkpoint.\n",
+    "        best_ckpt = list(last_ckpt['callbacks'].values())[0]['best_model_path'] # Get the best checkpoint path.\n",
+    "        best_state_dict = torch.load(best_ckpt)['state_dict'] # Load the best state dict.\n",
+    "        best_state_dict = {k.replace('model.', ''): v for k, v in best_state_dict.items()} # Remove the 'model.' prefix.\n",
+    "        model.load_state_dict(best_state_dict)\n",
+    "\n",
+    "        # Turn into a lightning model.\n",
+    "        model.eval()\n",
+    "        lit_model = TorchLightningModule(model=model, optimizer=None, score_dim=1, print_log=False)\n",
+    "\n",
+    "        # Start testing.\n",
+    "        time_start = time.time()\n",
+    "        logger = CSVLogger(save_dir=save_dir, name=f\"{mode}-{backend}-Q{n_Q}-{rnd_seed}\")\n",
+    "        trainer = L.Trainer(accelerator='cpu', default_root_dir=save_dir, logger=logger)\n",
+    "\n",
+    "        status = 'Success'\n",
+    "        message = ''\n",
+    "        trainer.test(model=lit_model, datamodule=data_module)\n",
+    "\n",
     "except Exception as e:\n",
     "    status = 'Failed'\n",
     "    message = e\n",
+    "\n",
     "finally:\n",
     "    time_end = time.time()\n",
     "    print(f\"Time elapsed on IBMQ ({ibmq_config['Device'][mode]['qbackend']}): {time_end - time_start:.2f}s\")\n",
